src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-35.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%TAG ! %\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- token: error
  stream: "%"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 0
      column: 8
- severity: error
  message: "expected a hex digit (0-9, a-z or A-Z), but reached end of input"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 8
      line: 0
      column: 8
  stream: ""
- token: tag_prefix
  stream: ""
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 8
      line: 0
      column: 8
- value:
    version: ~
    tags:
      "!": ""

