src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-4.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%TAG foo\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: error
  stream: foo
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 8
      line: 0
      column: 8
- severity: error
  message: "expected '!', but found 'f'"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
  stream: f
- value:
    explicit: false
    version: ~
    tags: {}

